# pichpich

./: .gitattributes  .pichpich-ignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/internal_tools/: Cargo.toml
crates/internal_tools/src/: main.rs
crates/pichpich/: Cargo.toml
crates/pichpich/src/: analysis.rs  core.rs  format_utils.rs  frontend.rs  lib.rs  main.rs  parse_clike.rs  parse_gitdiff.rs  utils.rs
crates/pichpich/tests/: snapshots.rs
crates/pichpich/tests/snapshots/: parse-basic.cxx  snapshots__doc_parsing_snapshots.snap  snapshots__enclosing_spans_snapshots-2.snap  snapshots__enclosing_spans_snapshots.snap  snapshots__error_snapshots.snap  snapshots__internal_state_snapshots.snap
crates/pichpich/tests/snapshots/enclosing-spans/: block-comments.cxx  line-comments.cxx
crates/pichpich/tests/snapshots/error-basics/: single-file-errors.txt
crates/pichpich/tests/snapshots/internal-state-basics/: tmp.txt
crates/pichpich_config/: Cargo.toml
crates/pichpich_config/src/: config.rs
docs/: CLI.md
src/: analysis.rs  config.rs  core.rs  frontend.rs  lib.rs  main.rs  miette_utils.rs  utils.rs
tests/: snapshots.rs
tests/snapshots/: snapshots__error_snapshots.snap  snapshots__internal_state_snapshots.snap
tests/snapshots/error-basics/: single-file-errors.txt
